[gd_scene load_steps=6 format=3 uid="uid://cx44erc66dldk"]

[ext_resource type="Script" uid="uid://3xwqq4regi25" path="res://Scenes/FeedScene/feeding_it_minigame.gd" id="1_f7uby"]
[ext_resource type="Texture2D" uid="uid://c26qatnkr8yc5" path="res://Assets/menuBackground.png" id="1_xmgol"]
[ext_resource type="Texture2D" uid="uid://bt5xl8rbpdxt" path="res://Assets/plateTexture.png" id="2_a5nmm"]
[ext_resource type="PackedScene" uid="uid://dhjjqyovwuabw" path="res://Scenes/Objects/AliceaCoinDisplayObject.tscn" id="3_d5boo"]
[ext_resource type="PackedScene" uid="uid://b871kod3sdg6h" path="res://Scenes/Objects/AliceaDoroObject.tscn" id="4_1fjla"]

[node name="FeedingItMinigame" type="Window"]
disable_3d = true
initial_position = 1
size = Vector2i(500, 500)
transient = true
transient_to_focused = true
unresizable = true
script = ExtResource("1_f7uby")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 500.0
metadata/_edit_lock_ = true

[node name="Background" type="TextureRect" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_xmgol")
metadata/_edit_lock_ = true

[node name="AliceaCoinDisplayObject" parent="Control" instance=ExtResource("3_d5boo")]
layout_mode = 1
offset_left = -6.0
offset_top = 4.0
offset_right = -300.0
offset_bottom = -449.0

[node name="ReRollButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -41.0
offset_right = 31.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Re-Roll"
metadata/_edit_lock_ = true

[node name="ExitButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = -42.0
offset_right = 48.0
offset_bottom = -11.0
grow_vertical = 0
text = "Exit"
metadata/_edit_lock_ = true

[node name="Plate1" type="TextureRect" parent="Control"]
texture_filter = 1
layout_mode = 1
offset_top = 132.0
offset_right = 126.0
offset_bottom = 258.0
texture = ExtResource("2_a5nmm")
metadata/_edit_lock_ = true

[node name="plateContent" type="TextureRect" parent="Control/Plate1"]
texture_filter = 1
layout_mode = 1
offset_right = 126.0
offset_bottom = 126.0
metadata/_edit_lock_ = true

[node name="Label1" type="Label" parent="Control/Plate1"]
texture_filter = 1
layout_mode = 0
offset_left = 17.0
offset_top = 121.0
offset_right = 112.0
offset_bottom = 144.0
text = "Sample Text"
horizontal_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="TextureButton1" type="TextureButton" parent="Control/Plate1"]
layout_mode = 0
offset_right = 132.0
offset_bottom = 155.0
metadata/_edit_lock_ = true

[node name="Plate2" type="TextureRect" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -63.0
offset_top = 132.0
offset_right = 63.0
offset_bottom = 258.0
grow_horizontal = 2
texture = ExtResource("2_a5nmm")
metadata/_edit_lock_ = true

[node name="plateContent" type="TextureRect" parent="Control/Plate2"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -63.0
offset_right = 63.0
offset_bottom = 126.0
grow_horizontal = 2
metadata/_edit_lock_ = true

[node name="Label2" type="Label" parent="Control/Plate2"]
texture_filter = 1
layout_mode = 0
offset_left = 17.0
offset_top = 121.0
offset_right = 112.0
offset_bottom = 144.0
text = "Sample Text"
horizontal_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="TextureButton2" type="TextureButton" parent="Control/Plate2"]
layout_mode = 0
offset_left = -4.0
offset_top = -2.0
offset_right = 128.0
offset_bottom = 153.0
metadata/_edit_lock_ = true

[node name="Plate3" type="TextureRect" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -126.0
offset_top = 132.0
offset_bottom = 258.0
grow_horizontal = 0
texture = ExtResource("2_a5nmm")
metadata/_edit_lock_ = true

[node name="plateContent" type="TextureRect" parent="Control/Plate3"]
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -126.0
offset_bottom = 126.0
grow_horizontal = 0
metadata/_edit_lock_ = true

[node name="Label3" type="Label" parent="Control/Plate3"]
texture_filter = 1
layout_mode = 0
offset_left = 18.0
offset_top = 121.0
offset_right = 113.0
offset_bottom = 144.0
text = "Sample Text"
horizontal_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="TextureButton3" type="TextureButton" parent="Control/Plate3"]
layout_mode = 0
offset_left = -6.0
offset_top = -2.0
offset_right = 126.0
offset_bottom = 153.0
metadata/_edit_lock_ = true

[node name="AliceaDoroObject" parent="." instance=ExtResource("4_1fjla")]
position = Vector2(419, 426)
scale = Vector2(1.3, 1.3)
particlesEnum = 2

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="Control/ReRollButton" to="." method="_on_re_roll_button_pressed"]
[connection signal="pressed" from="Control/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Control/Plate1/TextureButton1" to="." method="_on_texture_button_1_pressed"]
[connection signal="pressed" from="Control/Plate2/TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="Control/Plate3/TextureButton3" to="." method="_on_texture_button_3_pressed"]
